--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta http-equiv="Refresh" content="0; URL=https://github.com/RoMeAh">
+    <meta http-equiv="Refresh" content="0; URL=https://www.blazify.rocks/">
 <h1>
-    Redirecting to Github... Please be Patient
+    Redirecting... Please be Patient
 </h1>
 </html>
